# lidar_imu_calib

lidar_imu_calib/: CMakeLists.txt  package.xml
lidar_imu_calib/include/: HandEyeCalibration.h  calibExRLidar2Imu.h  utils.h
lidar_imu_calib/launch/: calib_exR_lidar2imu.launch
lidar_imu_calib/msg/: chassis_data.msg
lidar_imu_calib/src/: calib_exR_lidar2imu_node.cpp
lidar_imu_calib/src/lib/: HandEyeCalibration.cc  calibExRLidar2Imu.cpp
